--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "serve-frontend": "http-server Frontend -p 5500"
+    "serve-frontend": "http-server ../Frontend -p 5500",
+    "db:init": "tsx src/scripts/init-db.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
@@ -20,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.17",
     "dotenv": "^17.2.3",
+    "http-server": "^14.1.1",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
