--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
-    "@types/better-sqlite3": "^7.6.13",
     "bcrypt": "^6.0.0",
-    "better-sqlite3": "^12.4.1",
     "hono": "^4.10.5",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
